src/main/java/org/example/moviesplatform/error/model/GenreNotFoundException.java
package org.example.moviesplatform.error.model;

public class GenreNotFoundException extends RuntimeException {
    public GenreNotFoundException(String message) {
        super(message);
    }
}
